# OpenGI

./: .gitignore  CMakeLists.txt
Models/: cornell_box.mtl
Renderer/: CMakeLists.txt  Renderer.cpp
Renderer/include/: Renderer.h  obj_loader.h  renderPipeline.h  render_data.h  renderpass.h  shader.h  tinyobjloader.h  utilities.h  vertex.h
Renderer/src/: renderPipeline.cpp  render_data.cpp  renderpass.cpp  shader.cpp
Shaders/: blinn-phong_frag.glsl  blinn-phong_vert.glsl  learnGL1Frag.glsl  learnGL1Vertex.glsl  mixFrag.glsl  pass2f.glsl  pass2v.glsl  pathFrag.glsl  tfrag.glsl  toneMappingFrag.glsl  tvert.glsl
